--- a/config.ini
+++ b/config.ini
@@ -7,9 +7,10 @@ RMQ_HOST = 127.0.0.1
 RMQ_PORT = 5672
 RMQ_USER = Versatronics
 RMQ_PASSWORD = Versatronics
+RMQ_DISCARD_LIMIT = 5
 
 [LV300]
-WRITE_CSV = True
+WRITE_CSV = False
 USE_BULK_CSV = True
 SAVE_IMAGES = True
 CSV_SAVE_PATH = CSV/
@@ -26,5 +27,7 @@ DISABLE_LPR = False
 OUTPUT_0_PULSE = 1000
 OUTPUT_1_PULSE = 1000
 TRIGGER_QUEUE = CAMERA_1_TRIGGER
-DISABLE_LPR_TRANSIT = True
+DISABLE_LPR_TRANSIT = False
+AUTO_PASSAGE = False
+AUTO_PASSAGE_OUTPUTS = 0,1
 # CAMERA TYPES = Entry Exit Rear_Exit
